--- a/TMessagesProj/src/main/res/layout/User_profile_layout.xml
+++ b/TMessagesProj/src/main/res/layout/User_profile_layout.xml
@@ -64,6 +64,14 @@
                 android:layout_height="wrap_content"
                 android:text="Gift"
                 android:layout_marginStart="8dp"/>
+
+            <Button
+                android:id="@+id/toggleThemeButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Toggle theme"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="24dp"/>
         </LinearLayout>
         <!--more elements need to be added like media preview, shared links etc-->
     </LinearLayout>
