--- a/TMessagesProj/src/main/res/layout/User_profile_layout.xml
+++ b/TMessagesProj/src/main/res/layout/User_profile_layout.xml
@@ -75,4 +75,11 @@
         </LinearLayout>
         <!--more elements need to be added like media preview, shared links etc-->
     </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/giftTabContainer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="16dp" />
 </scrollView>
